--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   </div>
 
 <script>
-const WORKER_URL = "https://gptim24.timashevanatoly10.workers.dev";
+const WORKER_URL = "https://gptim24.timashevanatoly10.workers.dev/chat";
 const PWA_TOKEN = "123456789123456789123456789";
 
 const chat = document.getElementById("chat");
